--- a/Backend/Procfile
+++ b/Backend/Procfile
@@ -1,2 +1,2 @@
-web: java -jar Backend/build/libs/<JAR_FILE_NAME_HERE>.jar
+web: java -jar Backend/build/libs/Cooperator-Backend-0.0.1-SNAPSHOTS.jar
 
