--- a/Backend/build.gradle
+++ b/Backend/build.gradle
@@ -23,10 +23,11 @@ repositories {
 }
 
 dependencies {
+	implementation 'org.springframework.boot:spring-boot-starter-data-rest'
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	runtimeOnly 'org.postgresql:postgresql'
 	implementation 'org.hibernate:hibernate-core:5.4.1.Final'
-	testCompile 'junit:junit:4.12'
+//	testCompile 'junit:junit:4.12'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
