--- a/Backend/build.gradle
+++ b/Backend/build.gradle
@@ -28,6 +28,10 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	runtimeOnly 'org.postgresql:postgresql'
 	implementation 'org.hibernate:hibernate-core:5.4.1.Final'
-//	testCompile 'junit:junit:4.12'
+	testImplementation "junit:junit:4.12"
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
+	testRuntime('org.junit.jupiter:junit-jupiter-engine:5.3.1')
+	testImplementation('org.mockito:mockito-core:2.+')
+  	testImplementation('org.mockito:mockito-junit-jupiter:2.18.3')
+  	testImplementation group: 'org.junit.platform', name: 'junit-platform-launcher', version: "1.3.1"
 }
