--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,22 @@
+matrix:
+  include:
+    - language: node_js
+      node_js:
+        - "6"
+
+      before_install:
+        - cd Frontend
+        - npm install
+
+      script:
+        - npm run build
+        
+      deploy:
+       provider: heroku
+       api_key:
+         secure: 8f8af8af-026b-4e93-bde6-2e751938d95a
+       app: coop-frontend-g8
+
 
 language: java
 script:
